--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 body {
@@ -94,7 +95,7 @@ body {
     opacity: 0;
     visibility: hidden;
     transform: translate(-50%, -30%);
-    transition-delay: 0.2s;
+    transition-delay: 0.3s;
   }
 
   &.show {
